# VishwamAI

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  =0.10.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_ASSESSMENT_REPORT.md  DISTILLATION_FIX_SUMMARY.md  DISTILLATION_STEPS.md  Dockerfile  GSM8K_Training.ipynb  HUGGINGFACE_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MODEL_CARD.md  Makefile  QUICKSTART.md  README.md  README_COLAB.md  README_DISTILLATION.md  README_GPU.md  README_HUGGINGFACE.md  SETUP.md  TRAINING.md  TRAINING_README.md  VishwamAI_Distillation.ipynb  assess_development.py  benchmark_vishwamai.py  colab_setup.md  colab_setup.sh  colab_train.ipynb  conceptual.model  conceptual.vocab  demo_vishwamai.py  development_assessment_report.json  direct_import_test.py  (+49 more)
.github/workflows/: ci.yml  pytest_and_autopublish.yml  test.yml
VishwamAI_repo/.git_disabled/: config
configs/: development_tracking.yaml  distillation_config.json  distillation_config.yaml  large_model.json  medium_model.json  multimodal_config.json  pretrain_config.yaml  pretrain_config_colab.yaml  pretrain_config_colab_max.yaml  small_model.json  tpu_optimized_config.yaml  tpu_pretrain_config.py
data/: generate_parquet.py  sample_dataset.json  train.parquet  val.parquet
docs/: A100_OPTIMIZATIONS.md  Advanced_Multimodal_Development_Guide.md  Building Custom Generative AI with Limited Resourc.md  DuckDB_Integration_Guide.md  GPU_TESTING.md  Multimodal AI Development Research_.md  Multimodal_AI_Development_Guide.markdown  SETUP.md  VishwamAI Development Blueprint.md  advanced_training.md  architecture.mermaid  autopromptengineer.md  ci_cd_setup.md  errorcorrection.md  filestructure.md  phases.md  presentation.md  quick_test_guide.md  technical.md  technical_paper.md  test_report_template.md  testing_setup.md  tot.md  tpu_optimization_guide.md
docs/technical/: 00_index.md  01_architecture_overview.md  02_core_components.md  03_configuration_guide.md  04_advanced_features.md  05_performance_optimizations.md  06_usage_guide.md
docs/technical_papers/: 00_executive_summary.md  01_deepgemm_analysis.md  02_deepep_analysis.md  03_dualpipe_analysis.md  04_eplb_analysis.md  05_flashmla_analysis.md  06_model_integration_analysis.md
examples/: README.md  advanced_model_demo.py  advanced_multimodal_demo.py  basic_duckdb_training.py  benchmark_precision.py  conditional_usage.py  mixture_of_recursions_example.py  model_quickstart.py  model_usage.py  quickstart.bat  quickstart.sh  requirements.txt  run_advanced_demo.bat  run_advanced_demo.sh  sonar_usage.py  train_with_precision.py  transformer_usage.py
gsm8k_test_model/checkpoint-0/: config.json
gsm8k_test_model/final_model/: concept_data.json
math/: deepmind.py  train_deepmind.py  vishwamai_math_integration.ipynb
model analysis/: deepseek.py  grok.py
model_analysis/: gsm8k_analysis.ipynb
monitoring/prometheus/: alert_rules.yml  prometheus.yml
notebooks/: LLM_Distillation.ipynb  efficient_pretraining.ipynb  experiment1.ipynb  experiment2.ipynb  filechecking.sh  gpt_dev.ipynb  gpu_analysis.ipynb  model_analysis.ipynb  model_analysis_of_vishwamai.ipynb  tpu_analysis.ipynb  train_gsm8k.ipynb  train_vishwamai_distillation.ipynb  training_analysis.ipynb  vishwamai_distillation_training.ipynb
ollama/: Modelfile  build_and_test.sh  convert_to_ollama.py
scripts/: cleanup_ci_cd.sh  distill_qwen_to_vishwamai.py  inference.py  maintain_ci_cd.sh  prepare_data.py  profile_cuda.py  setup_ci_cd.sh  setup_profiling.sh  train_distillation.py  train_vishwamai.py  train_with_duckdb.py  visualize_profile.py
tests/: README.md  __init__.py  config_fixtures.py  configtest.py  conftest.py  importtest.py  minimal_tokenizer_test.py  modelanalysistest.py  pytest.ini  requirements-test.txt  requirements.txt  run_precision_tests.bat  run_precision_tests.sh  run_tests.py  setup.py  setup_tests.bat  setup_tests.sh  test_advanced_features.py  test_advanced_training.py  test_attention.py  test_conceptual_tokenizer.py  test_context_window_management.py  test_convert.py  test_cuda_distillation.cu  test_data.json  test_deep_reasoning.py  test_deepthinking.py  test_distillation_comprehensive.py  test_distillation_lightweight.py  test_distillation_optimizers.py  test_generate.py  test_generative.py  test_information_retrieval.py  test_kernel.py  test_kernel_layers.py  test_kernels.py  test_math_training.py  test_mixture_of_recursions.py  test_model.py  test_model_server.py  (+9 more)
tokenizer_test_output/: vishwamai.vocab
tokenizer_test_output_saved/: tokenizer_config.json
tokenizer_test_output_special/: vishwamai.vocab
vishwamai/: LICENSE  MLA.py  MLP.py  MoE.py  README.md  Transformer.py  __init__.py  advanced_multimodal.py  advanced_training.py  architecture.py  attention.py  base_layers.py  cache_augmentation.py  complete_init_cell.py  conceptual_tokenizer.py  conceptualmodel.py  config.json  config.py  config_validator.py  constants.py  convert.py  cot.py  cpu_kernels.py  curriculum.py  data_utils.py  dataprocessing.py  deep_reasoning.py  deepthinking.py  device_mesh.py  distill.py  distillation.py  efficient_attention.py  emergent_behavior.py  error_correction.py  error_correction_trainer.py  ethical_framework.py  evaluation.py  final_cell.py  final_init_cell.py  flash_attention.py  (+64 more)
vishwamai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vishwamai/architecture/: __init__.py  attention.py  config.py  init.py  mlp.py  transformer.py
vishwamai/archived_components/: tot.py
vishwamai/config/: __init__.py  a100_config.py  expert_config.py  model_args.py  model_config.py  training_config.py
vishwamai/configs/: 12b.json  __init__.py  budget_model_config.py  conditional_config.json  config_10B.json  config_16b.json  config_671b.json  config_optimized.json  data_config.yaml  default_config.yaml  inference_config.yaml  integration_config.py  mla_config.yaml  model_config.py  model_config.yaml  (+9 more)
vishwamai/kernels/csrc/: CMakeLists.txt  flash_mla.cu  flash_mla_cuda.cpp  setup.py
wandb/: latest-run
(+394 files in other folders)
