[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vishwamai"
version = "0.2.0"
description = "Advanced language model training system with Hydra configuration, hyperparameter tuning, and distributed training support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
jax = "^0.4.13"
jaxlib = "^0.4.13"
flax = "^0.7.2"
optax = "^0.1.7"
transformers = "^4.35.0"
datasets = "^2.14.0"
torch = "^2.1.0"  # Required for DataLoader and other utilities
hydra-core = "^1.3.2"
wandb = "^0.15.12"
tensorboard = "^2.14.0"
optuna = "^3.4.0"
ray = {extras = ["tune"], version = "^2.7.0"}
omegaconf = "^2.3.0"
numpy = "^1.24.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.coverage.run]
source = ["vishwamai"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.poetry.scripts]
train = "vishwamai.training_v2:main"
