[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vishwamai"
version = "0.2.0"
description = "Advanced language model training system with Hydra configuration, hyperparameter tuning, and distributed training support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
jax = "^0.4.14"
jaxlib = "^0.4.14"
flax = "^0.7.3"
optax = "^0.1.8"
transformers = "^4.36.0"
datasets = "^2.15.0"
torch = "^2.2.0"  # Required for DataLoader and other utilities
hydra-core = "^1.3.3"
wandb = "^0.15.13"
tensorboard = "^2.15.0"
optuna = "^3.5.0"
ray = {extras = ["tune"], version = "^2.8.0"}
omegaconf = "^2.3.1"
numpy = "^1.25.0"
tqdm = "^4.67.0"
huggingface-hub = "^0.19.0"
safetensors = "^0.4.0"
sentencepiece = "^0.1.99"
duckdb = "^0.9.2"  # For efficient metrics logging
pandas = "^2.1.0"  # For data manipulation with DuckDB
dm-haiku = "^0.0.11"  # For neural network layers and utilities

[tool.poetry.group.dev.dependencies]
pytest = "^7.5.0"
pytest-cov = "^4.2.0"
black = "^23.8.0"
isort = "^5.13.0"
flake8 = "^6.2.0"
mypy = "^1.6.0"
pytest-xdist = "^3.3.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.coverage.run]
source = ["vishwamai"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.poetry.scripts]
train = "vishwamai.training_v2:main"
